--- a/java-tomcat-sample/Jenkinsfile
+++ b/java-tomcat-sample/Jenkinsfile
@@ -1,25 +1,27 @@
 pipeline {
     agent any
     stages {
-        stage('Build Application') {
-            steps {
-                sh 'mvn -f java-tomcat-sample/pom.xml clean package'
-            }
-            post {
-                success {
+        stage('Build Application') 
+                {
+                    steps 
+                    {
+                        sh 'mvn -f java-tomcat-sample/pom.xml clean package'
+                    }
+            post 
+                {
+                    success 
+                    {
                     echo "Now Archiving the Artifacts...."
                     archiveArtifacts artifacts: '**/*.war'
+                    }
                 }
+                }
+        stage('Deploy in Staging Environment')
+                {
+                steps
+                    {
+                    build job: 'Deploy_Application_Staging_Env'
+                    }
+                }          
             }
         }
-        stage('Deploy in Staging Environment'){
-            steps{
-                build job: 'Deploy_Application_Staging_Env'
-
-            }
-            
-        
-        
-        }
-    }
-}
