--- a/java-tomcat-sample/Jenkinsfile
+++ b/java-tomcat-sample/Jenkinsfile
@@ -22,6 +22,17 @@ pipeline {
                     {
                     build job: 'Deploy_Application_Staging_Env'
                     }
-                }          
-            }
+                }   
+        stage('Deploy to Production')
+                {
+                steps
+                    {
+                    timeout(time:5, unit:'DAYS')
+                        {
+                        input message:'Approve PRODUCTION Deployment?'
+                        }
+                    build job: 'Deploy_Application_Prod_Env'
+                    }
+                }
         }
+    }
